Added home component en prefix

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <link rel="manifest" href="assets/site.webmanifest">
 </head>
 <body>
-  <app-root></app-root>
+  <nick-home></nick-home>
 </body>
 </html>
